# walet-simple

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  config.h  main.cpp  main1.cpp  note.txt  sumWallet.txt  transactions.txt  user.txt  wallet.txt
